--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,20 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#0099cc"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ca.stevenlyall.comppass.MainActivity"
-    android:background="#0099cc">
+    tools:context="ca.stevenlyall.comppass.MainActivity">
 
     <Button
+        android:id="@+id/startGameBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start Game"
-        android:id="@+id/startGameBtn"
-        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:textColor="#000000"
-        android:backgroundTint="#33b5e5"/>
+        android:layout_centerVertical="true"
+        android:backgroundTint="#33b5e5"
+        android:text="Start Game"
+        android:textColor="#000000"/>
+
 </RelativeLayout>
