--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -2,7 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             android:background="#0099cc"
+              android:background="@color/teal"
               android:orientation="vertical"
               tools:context="ca.stevenlyall.comppass.ResultsActivity">
 
@@ -17,9 +17,10 @@
         android:gravity="center"
         android:keepScreenOn="true"
         android:text="Challenge Completed!"
-        android:textColor="#33b5e5"
+        android:textColor="@color/colorPrimary"
         android:textSize="50sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        />
 
     <TableRow
         android:id="@+id/textView"
@@ -111,9 +112,9 @@
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal|bottom"
         android:layout_marginTop="40dp"
-        android:backgroundTint="#33b5e5"
+        android:backgroundTint="@color/colorPrimary"
         android:text="Send Results"
-        android:textColor="#000000"/>
+        android:textColor="#FFF"/>
 
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
