--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -2,20 +2,29 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             android:background="#0099cc"
+             android:background="#e0f2f1"
              tools:context="ca.stevenlyall.comppass.SplashScreenActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@mipmap/compasslogo_lg"/>
+
     <TextView
         android:id="@+id/fullscreen_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
+        android:layout_height="148dp"
+        android:layout_gravity="center_horizontal|bottom"
+        android:gravity="center_horizontal|top"
         android:keepScreenOn="true"
         android:text="Loading..."
-        android:textColor="#33b5e5"
+        android:textColor="#455a64"
         android:textSize="50sp"
         android:textStyle="bold"/>
 
