--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-
+    <color name="colorPrimary">#FF1E4C40</color>
+    <color name="colorPrimaryDark">#37474f</color>
+    <color name="colorAccent">#37474f</color>
+    <color name="teal">#e0f2f1</color>
     <color name="black_overlay">#66000000</color>
 </resources>
