add button to go to results site

--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -106,7 +106,7 @@
     </TableRow>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/sendButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -128,6 +128,19 @@
         android:textColor="@color/colorPrimary"
         android:textSize="30dp"
         android:textStyle="bold"
+        android:visibility="gone"/>
+
+    <Button
+        android:id="@+id/viewScoresBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_marginTop="40dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:text="View High Scores"
+        android:textColor="#FFF"
         android:visibility="gone"/>
 
     <!-- This FrameLayout insets its children based on system windows using
